# swagger/v1/swagger.yaml
@@ -71,18 +71,48 @@ paths:
       - Post
       security:
       - bearerAuth: []
+      parameters: []
       responses:
         '200':
           description: successful
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                title:
+                  type: string
+                content:
+                  type: string
+                user:
+                  type: object
+              required:
+              - title
     put:
       summary: update post
       tags:
       - Post
       security:
       - bearerAuth: []
+      parameters: []
       responses:
         '200':
           description: successful
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                title:
+                  type: string
+                content:
+                  type: string
+                user:
+                  type: object
+              required:
+              - title
     delete:
       summary: delete post
       tags:
@@ -90,8 +120,59 @@ paths:
       security:
       - bearerAuth: []
       responses:
+        '204':
+          description: no content
+  "/api/v1/posts/{id}/comments":
+    parameters:
+    - name: id
+      in: path
+      description: id
+      required: true
+      schema:
+        type: string
+    get:
+      summary: show post comments
+      tags:
+      - Post
+      - Comments
+      security:
+      - bearerAuth: []
+      responses:
         '200':
           description: successful
+        '404':
+          description: not found
+        '401':
+          description: unauthorized
+    post:
+      summary: create a new comment
+      tags:
+      - Post
+      - Comments
+      parameters: []
+      security:
+      - bearerAuth: []
+      responses:
+        '201':
+          description: created
+        '422':
+          description: unprocessable entity
+        '401':
+          description: unauthorized
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                content:
+                  type: string
+                post:
+                  type: object
+                user:
+                  type: object
+              required:
+              - content
   "/api/v1/login":
     post:
       summary: Login
